--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "next build",
+    "export": "next build && next export"
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
